# TiendaVNPM

./: .gitignore
tienda/: index.html  package-lock.json  package.json  respaldo_tienda.sql  tienda.sql  vite.config.js
tienda/BD/: tiendaVN.sql
tienda/Backend/: Server_old.js  package.json
tienda/Server/: package-lock.json  package.json  server.js
tienda/Server/config/: database.js
tienda/Server/controllers/: alacenaController.js  clienteController.js  cuentaController.js  libroController.js  loginController.js  productoController.js  rolController.js  userController.js  ventaController.js  ventaLibroController.js
tienda/Server/middleware/: auth.js
tienda/Server/models/: Alacena.js  Cliente.js  Cuenta.js  Libro.js  Producto.js  Rol.js  Usuario.js  Venta.js  VentaLibro.js
tienda/Server/routes/: alacenaRoutes.js  authRoutes.js  clienteRoutes.js  clientes.js  cuentaRoutes.js  cuentas.js  libroRoutes.js  productoRoutes.js  productos.js  rolRoutes.js  userRoutes.js  ventaLibroRoutes.js  ventaRoutes.js  ventas.js
tienda/Server/validators/: authValidator.js  clienteValidator.js  cuentaValidator.js  libroValidator.js  productoValidator.js  userValidator.js  ventaValidator.js
tienda/src/: App.jsx  PrivateRoute.js  PrivateRoute.jsx  index.css
tienda/src-tauri/: Cargo.toml  tauri.conf.json
tienda/src-tauri/src/: auth.rs  commands.rs  database.rs  main.rs  models.rs
tienda/src/BD/: DB_Tienda.sql  Insert.sql
tienda/src/Modules/: Alacena.jsx  Alertas.jsx  CRUDClientes.jsx  Caja.jsx  CajaLibreria.jsx  Clientes.jsx  Dashboard.jsx  Header.jsx  Historico.jsx  (+9 more)
(+5 files in other folders)
